# getting-started-with-python-for-mike-plus

./: .nojekyll  README.md  index.html  search.json  styles.css
book/: .gitignore  _quarto.yml  index.qmd  intro.qmd  pyproject.toml  requirements.txt
book/images/: mikeio1d_data_structures.excalidraw
book/module1_foundations/: github.qmd  homework.qmd  ide.qmd  index.qmd  jupyter_notebooks.qmd  llm_coding.qmd  python_basics.qmd  python_management.qmd  python_scripts.qmd  scientific_python.qmd
book/module1_foundations/data/: fake_daily_rainfall.csv
book/module2_time_series/: 01_mikeio.qmd  02_reading_dfs0.qmd  03_data_selection.qmd  04_resampling.qmd  05_visualization.qmd  06_data_cleaning.qmd  07_writing_dfs0.qmd  homework.qmd  index.qmd
book/module2_time_series/data/: rain_events_2021_june.csv
book/module3_network_results/: 01_overview_mikeio1d.qmd  02_reading_network_files.qmd  03_exploring_network_and_results.qmd  04_selecting_network_data.qmd  homework.qmd  index.qmd  rainfall.dfs0
book/module3_network_results/data/: flow_meter_data.csv
book/module4_calibration_plots_and_statistics/: 01_intro_modelskill.qmd  02_preparing_data.qmd  03_matching_data.qmd  04_visualizing_performance.qmd  05_quantifying_performance.qmd  homework.qmd  index.qmd
book/module4_calibration_plots_and_statistics/data/: 116l1_model_discharge.dfs0  make_test_data.py  (+1 more)
book/module5_mikepluspy/: 01_mikepluspy.qmd  02_databases.qmd  03_select.qmd  04_modify.qmd  05_scenarios.qmd  06_simulations.qmd  homework.qmd  index.qmd
book/module6_putting_everything_together/: final_project.qmd
(+59 files in other folders)
